--- a/index.html
+++ b/index.html
@@ -1,53 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Page</title>
-<style>
-body{
-background-color: aqua;
-}
-.hero{
-font-family: Arial;
-font-weight: bold;
-color:white ;
-font-size: 50px;
-text-align: center;
-background-color: rgb(78, 40, 165);
-padding-top: 80px;
-padding-bottom: 90px;
-margin-top: 0px;
-}
-.mama{
-  font-family: Arial;
-font-weight: bold;
-color:white ;
-font-size: 50px;
-text-align: center;
-background-color: rgb(40, 165, 55);
-padding-top: 80px;
-padding-bottom: 90px;
-margin-top: 0;
+  <title>SEM 2</title>
 
-}
-.loop{
-  font-family: Arial;
-font-weight: bold;
-color:white ;
-font-size: 20px;
-text-align: center;
-background-color: rgb(240, 247, 34);
-padding-top: 30px;
-padding-bottom: 30px;
-margin-top: 0;
-
-}
-</style>
 </head>
-
 <body>
-  <P class="mama">MAMA THIS IS WEBSITE</P>
-  <P class="hero">HI MAMA THIS IS JAVA WHAT ARE YOU DOING</P>
-  <p class="loop">I WILL COME UP WITH ANOTHER ECITING WEBSITE BYE</p>
+<a href="https://drive.google.com/file/d/1-NvL_NRxr5On5JUIKwNWXdQd9YsSLkf_/view?usp=sharing">hello</a>
   
+
 </body>
 </html>
