--- a/index.html
+++ b/index.html
@@ -2,11 +2,173 @@
 <html>
 <head>
   <title>SEM 2</title>
+<style>
+body{
+background-color: aqua;
+}
+.hello{
+
+margin-top: 60px;
+font-family: Arial;
+font-weight: bold;
+font-size: 40px;
+text-align: center;
+background-color: azure;
+margin-bottom: 60px;
+
+
+}
+.metro{
+  margin-top: 60px;
+font-family: Arial;
+font-weight: bold;
+font-size: 30px;
+text-align: center;
+background-color: white;
+padding-bottom: 120px;
+}
+.matter{
+text-align: left;
+font-family: Arial;
+font-weight: bold;
+font-size: 20px;
+background-color: red;
+margin-bottom: 0;
+padding-top: 20px;
+
+
+
+}
+.ep{
+  text-align: left;
+font-family: Arial;
+font-weight: bold;
+font-size: 20px;
+background-color: rgb(255, 0, 230);
+margin-top: 0;
+padding-top: 20px;
+
+
+}
+.BEEE{
+  text-align: left;
+font-family: Arial;
+font-weight: bold;
+font-size: 20px;
+background-color: rgb(0, 255, 89);
+margin-top: 0;
+padding-top: 20px;
+}
+
+.BEE{
+  text-align: left;
+font-family: Arial;
+font-weight: bold;
+font-size: 20px;
+background-color: rgb(255, 230, 0);
+margin-top: 0;
+padding-top: 20px;
+}
+.NA{
+  text-align: left;
+font-family: Arial;
+font-weight: bold;
+font-size: 20px;
+background-color: rgb(255, 111, 0);
+margin-top: 0;
+padding-top: 20px; 
+}
+.EG{
+  text-align: left;
+font-family: Arial;
+font-weight: bold;
+font-size: 20px;
+background-color: rgb(191, 0, 255);
+margin-top: 0;
+padding-top: 20px; 
+}
+
+
+}
+
+
+
+
+
+
+
+</style>
 
 </head>
 <body>
-<a href="https://drive.google.com/file/d/1-NvL_NRxr5On5JUIKwNWXdQd9YsSLkf_/view?usp=sharing">hello</a>
   
+<div class="hello" >
+<a style="color: black" href="https://drive.google.com/file/d/12ybo0_HM2lqcUMqnbNlBSGlYWPJd5fv9/view?usp=sharing"  target="_blank">SEM TIME TABLE</a>
+</div>
+<div class="metro">
+<h1>Notes</h1>
+<div class="matter">
+<h1>DEVC :</h1>
+<a href="">UNIT 1</a><br>
+<a href="">UNIT 2</a><br>
+<a href="">UNIT 3</a><br>
+<a href="">UNIT 4</a><br>
+<a href="">UNIT 5</a>
+</div>
+<div class="ep">
+<h1>EP</h1>
+<a href="">UNIT 1</a><br>
+<a href="">UNIT 2</a><br>
+<a href="">UNIT 3</a><br>
+<a href="">UNIT 4</a><br>
+<a href="">UNIT 5</a>
+</div>
+<div class="BEEE">
+  <h1>BEEE(ELECTRONICS)</h1>
+  <a href="">UNIT 1</a><br>
+  <a href="">UNIT 2</a><br>
+  <a href="">UNIT 3</a><br>
+  <a href="">UNIT 4</a><br>
+  <a href="">UNIT 5</a>
+  </div>
+  <div class="BEE">
+    <h1>BEEE(ELECTRICAL)</h1>
+    <a href="">UNIT 1</a><br>
+    <a href="">UNIT 2</a><br>
+    <a href="">UNIT 3</a><br>
+    <a href="">UNIT 4</a><br>
+    <a href="">UNIT 5</a>
+    </div>
+    <div class="NA">
+      <h1>NA</h1>
+      <a href="">UNIT 1</a><br>
+      <a href="">UNIT 2</a><br>
+      <a href="">UNIT 3</a><br>
+      <a href="">UNIT 4</a><br>
+      <a href="">UNIT 5</a>
+      </div>
+      <div class="EG">
+        <h1>EG</h1>
+        <a href="">UNIT 1</a><br>
+        <a href="">UNIT 2</a><br>
+        <a href="">UNIT 3</a><br>
+        <a href="">UNIT 4</a><br>
+        <a href="">UNIT 5</a>
+        </div>
+  </div>
+      
+              
+
+
+
+
+
+
+
+
+
+
+</body>
 
 </body>
 </html>
