--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html>
 <head>
   <title>SEM 2</title>
@@ -111,12 +111,12 @@ padding-top: 20px;
 <h1>DEVC :</h1>
 <a href="https://drive.google.com/file/d/1MP6f70JxKYuHHHqcLo4CLXXmyFqmzKM6/view?usp=sharing" target="_blank">UNIT 1</a><br>
 <a href="https://drive.google.com/file/d/1xG7VVUjxCbvdfTW6ogxSa_GTk3W5f1xB/view?usp=sharing" target="_blank">UNIT 2</a><br>
-<a href="">UNIT 3</a><br>
+<a href="https://drive.google.com/file/d/1HsyftzkpIHtG2RGm_LMeJ2WZMJZIgghD/view?usp=sharing" target="_blank">UNIT 3</a><br>
 <a href="">UNIT 4</a><br>
 <a href="">UNIT 5</a><br>
 <a href="">ASSIGNMENTS</a><br>
 <a href="">MID PAPERS</a><br>
-<a href="">SEM PAPERS</a>
+<a href="https://drive.google.com/file/d/1csiqcTeQRznuOx3JTLno3TRDaYJtdsfd/view?usp=sharing" target="_blank">SEM PAPERS</a>
 </div>
 <div class="ep">
 <h1>EP</h1>
@@ -133,10 +133,9 @@ padding-top: 20px;
 </div>
 <div class="BEEE">
   <h1>BEEE(ELECTRONICS)</h1>
-  <a href="">UNIT 1</a><br>
-  <a href="">UNIT 2</a><br>
-  <a href="">UNIT 3</a><br>
-  
+  <a href="https://drive.google.com/file/d/16uSfF0OuGXy-q6GRxC0GCgsIdR7DUFku/view?usp=sharing" target="_blank">UNIT 1</a><br>
+  <a href="https://drive.google.com/file/d/1Lkd1QBOdUm0_1LLpShnPR-T5AcSxtXaZ/view?usp=sharing" target="_blank">UNIT 2</a><br>
+  <a href="https://drive.google.com/file/d/1s-uRokAUeZwMC97ZG4CjVbNZL9TceHU7/view?usp=sharing" target="_blank">UNIT 3</a><br>
   <a href="">ASSIGNMENTS</a><br>
 <a href="">MID PAPERS</a><br>
 <a href="">SEM PAPERS</a>
@@ -146,9 +145,9 @@ padding-top: 20px;
   </div>
   <div class="BEE">
     <h1>BEEE(ELECTRICAL)</h1>
-    <a href="">UNIT 1</a><br>
-    <a href="">UNIT 2</a><br>
-    <a href="">UNIT 3</a><br>
+    <a href="https://drive.google.com/file/d/1fi_1edhe-QZHtjZ9X3upRymTtqx7A392/view?usp=sharing" target="_blank">UNIT 1</a><br>
+    <a href="https://drive.google.com/file/d/1tdrltvtvi_kkcPG62JoEJzfhkn0Ox1V8/view?usp=sharing" target="_blank">UNIT 2</a><br>
+    <a href="https://drive.google.com/file/d/15Lwkg14oa4_Nfciyiu1ZaEOfqps3wd70/view?usp=sharing" target="_blank">UNIT 3</a><br>
     
     <a href="">ASSIGNMENTS</a><br>
     <a href="">MID PAPERS</a><br>
