--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SEM 2</title>
+  <title>I BTECH II SEM EXAM SCHEDULE </title>
 <style>
 body{
 background-color: aqua;
