--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>I BTECH II SEM EXAM SCHEDULE </title>
+  <title>SEM 2 </title>
 <style>
 body{
 background-color: aqua;
@@ -103,7 +103,7 @@ padding-top: 20px;
 <body>
   
 <div class="hello" >
-<a style="color: black" href="https://drive.google.com/file/d/12ybo0_HM2lqcUMqnbNlBSGlYWPJd5fv9/view?usp=sharing"  target="_blank">SEM TIME TABLE</a>
+<a style="color: black" href="https://drive.google.com/file/d/12ybo0_HM2lqcUMqnbNlBSGlYWPJd5fv9/view?usp=sharing"  target="_blank">I BTECH II SEM EXAM SCHEDULE</a>
 </div>
 <div class="metro">
 <h1>SEM 2</h1>
